# korean-romanizer

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST  MANIFEST.in  README.md  package-lock.json  package.json  pronouncer.py  pyproject.toml  rollup.config.js  romanizer.py  setup.cfg  setup.py  syllable.py  test_romanizer.py  vercel.json
.github/workflows/: python-app.yml  python-publish.yml
api/: bug_report.py  date.py  index.py  random_sentence.py  requirements.txt  romanize.py  romanize_test.py
benchmarks/: README.md  __init__.py  romanization.py
docs/: modernization-plan.md  rr-inventory.md
korean_romanizer/: __init__.py  cli.py  pronouncer.py  romanizer.py  syllable.py  tables.py
public/: index.html
scripts/: validate_wheel_metadata.py
src/: App.svelte  Footer.svelte  IssueReportDialog.svelte  Romanizer.svelte  TopBar.svelte  smui.css
src/theme/: _smui-theme.scss
tests/: test_benchmarks.py  test_characterization.py  test_cli.py  test_public_api.py  test_romanizer.py  test_rr_correctness.py  test_syllable_characterization.py  test_totality.py  test_unicode_characterization.py
