[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["korean_romanizer"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.ruff.lint]
# Match the current CI hard-fail flake8 rules; broaden after cleanup PRs.
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "korean_romanizer.syllable"
# Existing table stores None as a coda sentinel; model it explicitly later.
disable_error_code = ["arg-type"]
