[build-system]
requires = ["setuptools>=77", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "korean_romanizer"
dynamic = ["version"]
description = "A Python library for Korean romanization"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
  { name = "Ilkyu Ju", email = "ju.ilkyu@gmail.com" },
]
keywords = ["Korean", "Romanization", "Transliteration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/osori/korean-romanizer"
Repository = "https://github.com/osori/korean-romanizer"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "flake8>=7.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
kroman = "korean_romanizer.cli:main"

[tool.setuptools]
packages = ["korean_romanizer"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["korean_romanizer"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.ruff.lint]
# Match the current CI hard-fail flake8 rules; broaden after cleanup PRs.
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "korean_romanizer.syllable"
# Existing table stores None as a coda sentinel; model it explicitly later.
disable_error_code = ["arg-type"]
